syntax = "proto3";
package peer;

import "github.com/aperturerobotics/bifrost/hash/hash.proto";

// Signature contains a signature by a peer.
message Signature {
  // PubKey is the public key of the peer.
  // May be empty if the public key is to be inferred from context.
  bytes pub_key = 1;
  // HashType is the hash type used to hash the data.
  // The signature is then of the hash bytes (usually 32).
  hash.HashType hash_type = 2;
  // SigData contains the signature data.
  // The format is defined by the key type.
  bytes sig_data = 3;
}